--- a/src/container/Footer/Footer.css
+++ b/src/container/Footer/Footer.css
@@ -19,6 +19,10 @@
     padding: 0 2rem;
 }
 
+.app__footer-links h1 {
+    color: var(--color-golden);
+}
+
 .app__footer-links_contact,
 .app__footer-links_logo,
 .app__footer-links_work {
