--- a/src/container/Footer/Footer.css
+++ b/src/container/Footer/Footer.css
@@ -59,7 +59,7 @@
     font-family: var(--font-base);
     color: var(--color-white);
     font-weight: 400;
-    letter-spacing: 0.04rem;
+    letter-spacing: 0.04em;
     text-transform: capitalize;
     font-size: 32px;
     line-height: 41.6px;
